<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MLPerfEvaluation"
    tools:showIn="@layout/activity_main">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/topMenuDiv"
      android:layout_width="match_parent"
      android:layout_height="58dp"
      android:background="@color/topMenuBackground"
      app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="MLPerf logo"
        android:scaleType="centerInside"
        android:src="@drawable/mlperf_logo_horizontal_color"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/action_play"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/action_play"
        android:src="@drawable/ic_action_play"
        android:tint="@color/mlperfBlue"
        app:layout_constraintRight_toLeftOf="@+id/action_stop"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/action_stop"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/action_stop"
        android:src="@drawable/ic_action_stop"
        android:tint="@color/mlperfBlue"
        app:layout_constraintRight_toLeftOf="@+id/action_refresh"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/action_refresh"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/action_refresh"
        android:src="@drawable/ic_action_refresh"
        android:tint="@color/mlperfBlue"
        app:layout_constraintRight_toLeftOf="@+id/action_settings"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/action_settings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/ic_action_setting"
        android:tint="@color/mlperfBlue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <View
      android:id="@+id/logo_divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="0dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintTop_toBottomOf="@+id/topMenuDiv" />

  <TextView
      android:id="@+id/resultsLableTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingLeft="5dp"
      android:paddingTop="15dp"
      android:text="MLPerf Inference v0.5 Results:"
      android:textSize="14sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/logo_divider" />

  <LinearLayout
      android:id="@+id/resultsRowHeader"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="5dp"
      android:paddingTop="10dp"
      android:paddingRight="5dp"
      app:layout_constraintTop_toBottomOf="@+id/resultsLableTextView">

    <TextView
        android:id="@+id/objectName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:text="Model"
        android:textSize="12dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/runtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:text="Runtime"
        android:textSize="12dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:text="90th Percentile Latency"
        android:textSize="12dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:text="Accuracy"
        android:textSize="12dp"
        android:textStyle="bold" />

  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/results_recycler_view"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:gravity="bottom"
      app:layout_constraintBottom_toTopOf="@+id/divider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/resultsRowHeader" />

  <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="4dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintBottom_toTopOf="@+id/progressBar" />

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="0dp"
      android:layout_height="10dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="24dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
